- corrected Plots, now the same as in newest version of WideFieldScanPaper. - minor text-corrections and shifting of figure-placement
git-svn-id: http://code.ana.unibe.ch/svn/ProgressReport2009@8 0c1e4840-3ef3-4fc2-8e6d-3da5d23d04b9

--- a/img/ROI-1382-0546-0743.tex
+++ b/img/ROI-1382-0546-0743.tex
@@ -1,24 +1,26 @@
 % \documentclass{article}
-% \usepackage{tikz,pgfplots}
+% \usepackage{tikz,pgfplots,siunitx}
 % \usepackage[pdftex,active,tightpage]{preview}
+% \newcommand{\imsize}{\linewidth}
 % \begin{document}
 % \begin{preview}
 %%%%%%%%%%%%
 \begin{tikzpicture}
 
+%\pgfplotsset{every axis legend/.append style={at={(0.5,1.1)},anchor=south}}
+
 % Axis at [0.13 0.11 0.78 0.81]
 \begin{semilogyaxis}[
-% axis on top,
-% scale only axis,
-grid=both,
 width=\imsize,
-% height=3.56562in,
+grid=both,
 xmin=0, xmax=65,
 ymin=1, ymax=1e+007,
-xlabel={Thickness [\micro m]},
-ylabel={Number of Voxels},
-% title={ROI 2},
-legend entries={slow (ROI 2),med (ROI 2),fast (ROI 2)}
+xlabel={Thickness [$\micro$m]},
+ylabel={Pixel Count},
+legend entries={%
+    B ROI 2,%
+    L ROI 2,%
+    T ROI 2}
 ]
 
 \addplot [
@@ -72,7 +74,7 @@ solid
 
 \end{semilogyaxis}
 
-\end{tikzpicture}
-%%%%%%%%%%%%%
+\end{tikzpicture}%
+%%%%%%%%%%%%
 % \end{preview}
 % \end{document}
