--- a/ProgresssReport2009.tex
+++ b/ProgresssReport2009.tex
@@ -18,6 +18,8 @@
 \usepackage{lineno}
 	\linenumbers
 	\modulolinenumbers[2]
+\usepackage{setspace,savetrees}
+	\onehalfspacing
 \usepackage[backref]{hyperref}
 	\hypersetup{%
 		pdfauthor={David Haberthür},%
@@ -25,9 +27,7 @@
 		pdfsubject={Progress Report},%
 		pdfkeywords={progress report, graduate school, report},%
 		pdfpagemode=UseThumbs,
-		colorlinks=true % ... colored (true > no border, use "false" for final output)
-		}
-\usepackage[all]{hypcap}
+		colorlinks=true	}
 
 % Subversion Information
 \svnidlong
@@ -59,9 +59,9 @@
 Again, this year the focus of my work is on three-dimensional datasets obtained with high resolution synchrotron radiation based x-ray tomographic microscopy (SRXTM) at the beam line for TOmographic Microscopy and Coherent rAdiology experimenTs (TOMCAT) at the Swiss Light Source (SLS), Paul Scherrer Institute (PSI) in Villigen, Switzerland. During several beam times (details see section~\ref{sec:srxtm}) we recorded datasets of rat and mice lung samples with different characteristics. In the past year I have presented my work in multiple talks at both national and international conferences and have presented several posters about the topics I have been working on, have prepared one manuscript as a first author and coauthored one publication (details are listed in the Word document ProgressReport2009.doc).
 
 \section{SRXTM}\label{sec:srxtm}
-During 6 allotted beam times tomographic datasets of 170 samples have been obtained, an increase in output compared to the output presented in the last progress report. In total our group performed 248 single scans; the difference between amount of tomographic datasets and single scans again arises through the use of the so called wide field scanning (see section~\ref{sec:wfs}), where multiple single scans are merged to obtain tomographic datasets with increased field of view at the same pixel-resolution as the single scans.
+During 6 allotted beam times tomographic datasets of 170 samples have been obtained, an increased output compared to the output presented in the last progress report. In total our group performed 248 single scans; the difference between amount of tomographic datasets and single scans again arises through the use of the so called wide field scanning (see section~\ref{sec:wfs}), where multiple single scans are merged to obtain tomographic datasets with increased field of view at the same pixel-resolution as the single scans.
 
-Apart from 4 scans where we calibrated the tomographic beam line with electron microscopy grids or needle pins to thoroughly assess the beam and beam line characteristics, all tomographic datasets scanned have been of rat and mice lung samples. Slightly less than half of the tomographic scans (%
+Apart from 4 scans for calibrating the tomographic beam line with electron microscopy grids or needle pins, all tomographic datasets scanned have been of rat and mice lung samples. Slightly less than half of the tomographic scans (%
 % 15 Mariani
 % 12 Gold 
 % 36 Stockx
@@ -69,9 +69,9 @@ Apart from 4 scans where we calibrated the tomographic beam line with electron m
 76) have been scanned as part of four ongoing collaborations with external partners. The collaborating groups are:
 \begin{description}
 \item[The Lung Biology Center, Harvard Medical School] In the ongoing collaboration with Thomas Mariani we scanned 15 samples of PPAR Knockout mice. The tomographic datasets are used to study the alterations of the airway diameter in the mice. A paper of the findings is in preparation.
-\item[GSF-Institute of Inhalation Biology, Munich] Twelve samples of rat lungs with inhaled gold particles of \SI{200}{\nano\meter} and \SI{700}{\nano\meter} in size have been scanned. The tomographic datasets are used for a study on a bronchopulmonary disease model as a preparation of an application of the NFP 64 «Chancen und Risiken von Nanomaterialien». Generally, we use absorption-contrast tomography, but for these samples we also started to use phase-contrast tomography, which enables us to use unstained lung samples, which permits us to perform immunostaining and other biologically active test after obtaining tomographic datasets, something which is not possible with the uranyl-acetate-stained lungs samples used for absorption-contrast tomography.
+\item[GSF-Institute of Inhalation Biology, Munich] Twelve samples of rat lungs with inhaled gold particles (\SI{200}{\nano\meter} and \SI{700}{\nano\meter}) have been scanned. The tomographic datasets are used for a study on a bronchopulmonary disease model as a preparation of an application of the NFP 64 «Chancen und Risiken von Nanomaterialien». Generally, we use absorption-contrast tomography, but for these samples we also started to use phase-contrast tomography, which enables us to use unstained lung samples, which permits us to perform immunostaining and other biologically active test after obtaining tomographic datasets, something which is not possible with the uranyl-acetate-stained lungs samples used for absorption-contrast tomography.
 \item[Medicine, Nursing and Health Sciences, Monash University] For a study to investigate the effects of different activated Protein C isoforms and hyperoxia exposure on the pulmonary vasculature and capillary density of rat lungs we scanned 36 samples. 
-\item[Lehrstuhl für Numerische Mechanik, TU Munich] As a provider of the data for a study on the mechanics of alveolar tissue under breathing and motion stress we scanned 13 samples.
+\item[Lehrstuhl für Numerische Mechanik, TU Munich] We scanned 13 rat lung samples for a study on the mechanics of alveolar tissue under breathing and motion stress.
 \end{description}
 
 %\begin{table}[htp]
@@ -95,12 +95,11 @@ Apart from 4 scans where we calibrated the tomographic beam line with electron m
 %\caption{Details of all Beamtimes}
 %\label{tab:srxtm}
 %\end{table}
-
 \section{Wide field scanning}\label{sec:wfs}
-The method for increasing the field of view of the TOMCAT beam line presented in the last progress report has been routinely applied for the imaging of more than 30 rat lung samples by our group. The method is still pending the full implementation into the beam line workflow at the SLS as a module which other groups could use. A lot of my working time has been spent on the preparation of a manuscript for submission to the Journal of Synchrotron Radiation, which explains the concepts and implementation of the so-called wide field x-ray tomographic microscopy (WF-SRXTM). This manuscript is to be submitted by now\todo{really?}. The technical side of the wide field scanning method has been covered, future work will focus on the answering of biological questions using this method. Using WF-SRXTM we can now visualize entire rat lung acini\footnote{The acinus is defined as the complex of alveolated airways distal to the terminal bronchiole \cite{Rodriguez1987}, in which the gas-exchange in the lung takes place.}, something which was not generally possible using classical SRXTM, as can be seen in figure~\ref{fig:wfs-overview}.
+The method for increasing the field of view of the TOMCAT beam line presented in the last progress report has been routinely applied for the imaging of more than 30 rat lung samples by our group. The method is still pending the full implementation into the beam line workflow at the SLS as a module which other groups could use. A manuscript for submission to the Journal of Synchrotron Radiation, which explains the concepts and implementation of the so-called wide field x-ray tomographic microscopy (WF-SRXTM) at the TOMCAT beamline is in the last editing steps and should be ready for submission in January 2010\todo{really?}. The technical side of the wide field scanning method has been covered, future work will focus on the answering of biological questions using this method. With tomographic datasets obtained with WF-SRXTM we can now visualize entire rat lung acini\footnote{The acinus is defined as the complex of alveolated airways distal to the terminal bronchiole \cite{Rodriguez1987}, in which the gas-exchange in the lung takes place.}, something which was not generally possible using the classic tomographic acquisition method at TOMCAT, as can be seen in figure~\ref{fig:wfs-overview}.
 
 \renewcommand{\imsize}{0.5\linewidth}
-\begin{figure}[htp]
+\begin{figure}
 	\centering
 	\subfloat[Conventional SRXTM]{%
 		\pgfmathsetlength{\imagewidth}{\imsize}%
@@ -126,53 +125,49 @@ The method for increasing the field of view of the TOMCAT beam line presented in
 		\end{tikzpicture}%
 		\label{subfig:wf-srxtm}%
 		}%
-	\caption{Comparison of conventional SRXTM with WF-SRXTM of the same rat lung sample, obtained at postnatal day 4. Independent airway segments have been extracted using a region growing algorithm and are visualized using colored isosurfaces of the tissue-airspace-boundary. With conventional SRXTM (fig.~\ref{subfig:srxtm}) we see that the red airway segment is not fully contained in the total field of view of approx.\,1.52$\times$1.52$\times$\SI{1.52}{\milli\meter} (at a voxel size of \SI{1.48}{\micro\meter}), we thus cannot fully analyze it. Likewise for the green segment; it is only partially contained in the field of view. Increasing the field of view approximately three-fold in lateral direction to 3.7$\times$3.7$\times$\SI{1.52}{\milli\meter} %881x2516x1024px
-(voxel size of \SI{1.48}{\micro\meter}, fig~\ref{subfig:wf-srxtm}) makes it possible to segment three independent airway segments in the tomographic dataset. Both the green and red airway segment contain at least one full acinus, the yellow airway segment contains one partial acinus.%
+	\caption{Comparison of tomographic datasets obtained with conventional SRXTM and WF-SRXTM, respectively. Both visualizations show the same rat lung sample, obtained at postnatal day 4. Independent airway segments have been extracted using a region growing algorithm and are visualized using colored isosurfaces of the tissue-airspace-boundary. With conventional SRXTM (fig.~\ref{subfig:srxtm}) we see that the red airway segment is not fully contained in the total field of view of approx.\,1.52$\times$1.52$\times$\SI{1.52}{\milli\meter} (at a voxel size of \SI{1.48}{\micro\meter}), we thus cannot fully analyze it. Likewise for the green segment; it is only partially contained in the field of view. Increasing the field of view approximately three-fold in lateral direction to 3.7$\times$3.7$\times$\SI{1.52}{\milli\meter} %881x2516x1024px
+(voxel size of \SI{1.48}{\micro\meter}, fig~\ref{subfig:wf-srxtm}) makes it possible to segment three independent airway segments in the tomographic dataset. Both the green and red airway segment contain one or several full acini, the yellow airway segment contains one partial acinus.%
 }%
 \label{fig:wfs-overview}%
 \end{figure}
 
-I have developed a range of scanning protocols balancing between fast acquisition speed and lower reconstruction quality and low speed but high quality. One rat lung sample has been scanned using a set of 19 such protocols to thoroughly assess differences in reconstruction quality. We have shown that---as expected---the reconstruction quality is decreased for very fast scans, but that local structural parameter of the airway tree like diameter are not significantly changed.
+I have developed a range of scanning protocols for the end-user to choose from. The decision for a particular scannign protocol is made on a user-defined balance between acquisition time and image quality. One rat lung sample has been scanned using a set of 19 such protocols to thoroughly assess differences in reconstruction quality. We have shown that---as expected---the reconstruction quality is decreased for very fast scans, but that local structural parameter of the airway tree like diameter are not significantly changed and automatic segmentation of the tissue-airspace-boundary is still possible.
 
-To show this, four regions of interest with a side length of 256 pixels (at \SI{1.48}{\micro\meter\per pixel} have been extracted for three of the 19 protocols. The three-dimensional placement of these ROIs inside the sample is shown in figure~\ref{fig:roi3d}. Each of the ROIs has been binarized using an algorithmically determined threshold~\cite{Otsu1979} and small particles inside the segmented airspace lumen have been removed using a connected component labeling. Subsequently, the euclidean distance transformation has been calculated and plotted for each thresholded ROI and each of the three protocols.
+Even with a reduction of the total scanning time by \SI{84}{\percent}, no discernible structural alterations are introduced in the tomographic dataset. To show this, four regions of interest with a side length of 256 pixels (at \SI{1.48}{\micro\meter\per pixel} have been extracted for three of the 19 protocols, once for the gold-standart protocol (B, taking in total \SI{87}{\minute}), once for a medium (L, \SI{43}{\min} and once for a very fast protocol (T, \SI{12}{\min}) . The three-dimensional placement of these ROIs inside the sample is shown in figure~\ref{fig:roi3d}. Each of the ROIs has been binarized using an algorithmically determined threshold~\cite{Otsu1979} and small particles inside the segmented airspace lumen have been removed using a connected component labeling. Subsequently, the euclidean distance transformation has been calculated and plotted for each thresholded ROI and each of the three protocols. This distance transformation is 
 
 \renewcommand{\imsize}{\columnwidth}
-\begin{figure}[htp]
+\begin{figure}
 	\centering
-	\pgfmathsetlength{\imagewidth}{\imsize}
-	\pgfmathsetlength{\imagescale}{\imagewidth/1452}
-	\begin{tikzpicture}[x=\imagescale,y=-\imagescale]
-		\def\x{297} % scalebar-x at golden ratio of x=1452px
-		\def\y{684} % scalebar-y at 90% of height of y=760px
-		\node[anchor=north west, inner sep=0pt, outer sep=0pt] at (0,0)
-            {\includegraphics[width=\imagewidth]{img/ROIs-3d}};
-		% 1357px = 4.0138mm > 100px = 296um > 169px = 500um
-		% \draw[|-|,thick,red] (83,517) -- (1425,719) node [sloped,midway,below] {\SI{4.0138}{\milli\meter} (2712px)};
-		\draw[|-|,thick] (\x,\y) -- (\x+169,\y) node [midway, above] {\SI{500}{\micro\meter}};
-		%\draw[|-|,thick, white] (\x+645,\y-180) -- (\x+645+128,\y-180) node [midway, below] {\SI{256}{pixels}};
-		\draw ( 368,360) node [fill=white, semitransparent] {ROI 1} node {ROI 1};
-		\draw (1038,312) node [fill=white, semitransparent] {ROI 2} node {ROI 2};
-		\draw ( 767,413) node [fill=white, semitransparent] {ROI 3} node {ROI 3};
-		\draw ( 684,139) node [fill=white, semitransparent] {ROI 4} node {ROI 4};
+	\pgfmathsetlength{\imagewidth}{\imsize}%
+		\pgfmathsetlength{\imagescale}{\imagewidth/1563}%
+		\begin{tikzpicture}[x=\imagescale,y=-\imagescale]
+			\def\x{966-750} % scalebar-x at golden ratio of x=1563px
+			\def\y{768} % scalebar-y at 90% of height of y=853px
+			\node[anchor=north west, inner sep=0pt, outer sep=0pt] at (0,0)
+				{\includegraphics[width=\imagewidth]{img/ROIs-3d}};
+			% 1551px = 4.0138mm > 100px = 259um > 193px = 500um, 39px = 100um
+			\draw[|-|,thick] (\x,\y) -- (\x+193,\y) node [midway, above] {\SI{500}{\micro\meter}};
+			\draw [anchor=south] (294,429) node [fill=white, semitransparent] {ROI 1} node {ROI 1};
+			\draw [anchor=south] (745,493) node [fill=white, semitransparent] {ROI 2} node {ROI 2};
+			\draw [anchor=south] (742,190) node [fill=white, semitransparent] {ROI 3} node {ROI 3};
+			\draw [anchor=south] (1069,380) node [fill=white, semitransparent] {ROI 4} node {ROI 4};
 		\end{tikzpicture}%
 	\caption{Overview of the placement of the four regions of interest where the histogram of the euclidean distance transformation distribution has been calculated. Grey: Semitransparent volume rendering of the lung tissue sample. Red: Four regions of interest, extracted to calculate the distance transformation, each with a side-length of approx.\, \SI{380}{\micro\meter}. The labels of the ROIs conform to the legends in figure~\ref{fig:DTFplots}.}%		
 	\label{fig:roi3d}
 \end{figure}
 
 \renewcommand{\imsize}{0.5\linewidth}
-\begin{figure}[htp]
+\begin{figure}
 	\centering
-	\begin{tabular}{cc}
-		\input{img/edited-plot-roi1}&%
-		\input{img/edited-plot-roi2}\\%
-		\input{img/edited-plot-roi3}&%
-		\input{img/edited-plot-roi4}%
-	\end{tabular}
+		\input{img/ROI-0523-0497-0743.tex}%
+		\input{img/ROI-1382-0546-0743.tex}\\%
+		\input{img/ROI-1324-0266-0289.tex}%
+		\input{img/ROI-1863-0237-0604.tex}%
 	\caption{Histogram-Plots for each of the of 4 ROIs, each showing the histogram of the distance transformation for three of the 19 scanned protocols. Note the logarithmic axis for the pixel count.}%
 	\label{fig:DTFplots}
 \end{figure}
 
-We see that no significant difference in the airway diameter is introduced through the reduction of the scanning time (note the logarithmic axis for the voxel count). Further details on this analysis are in the manuscript I have prepared about the wide field SRXTM.
+Only very minor differences in the airway diameter are introduced through the reduction of the scanning time (note the logarithmic axis for the voxel count), and this only in the lateral parts of the sample, where---for the fastest protocols--the sampling theorem is far from being satisfied. Further details on this analysis are in the manuscript I have prepared about the wide field SRXTM.
 
 One result found with the visualization of rat lung acini over the postnatal lung development (day 4, 10, 21, 36 and 60 after birth) is that the acini seem to grow to a greater extent than predicted. Even if we have increased the visible sample volume nine-fold, we are still not able to enclose and fully visualize an entire rat lung acinus for postnatal days 36 and 60. Tomographic datasets with a three-fold increased lateral field of view only contain partial acini at these days. Recently, we thus recorded stacked WF-SRXTM scans, which increase the field of view both horizontally and vertically and plan to use these datasets for the study of the postnatal development of the acinar size.
 
@@ -180,12 +175,12 @@ One result found with the visualization of rat lung acini over the postnatal lun
 The manuscript attached to the last progress report has been published in the Journal of Physics~\cite{Haberthuer2009}. The initial workflow for multimodal imaging---the combination of the full, unconstricted three-dimensional information of SRXTM datasets with the ultrahigh resolution of transmission electron microscopy (TEM) images---has been refined by a master student in our group during a six-month master thesis. We are now able to routinely register datasets from two different imaging modalities. Two-dimensional ultrahigh resolution TEM slices without three-dimensional location information can now be matched with three-dimensional high-resolution SRXTM slices containing the unrestricted information on the exact location in the lung sample. This enables us to exactly study and visualize particle deposition both on a cellular level (e.g.\, uptake into epithelial cells) and on the airway tree level (e.g.\, particle deposition locations in the airway tree).
 
 \section{Structural Information}
-Multiple acinar airway skeletons have been generated from tomographic dataset as explained in my last progress report. Last year I worked on a manual method version of correcting loops and knots inside the extracted airway skeletons. Increasing both the volume and resolution of the datasets resulted in airway skeletons containing more than \num{10000} nodes. 
+Multiple acinar airway skeletons have been generated from tomographic dataset as explained in my last progress report. Last year I worked on a manual method version of correcting loops and knots inside the extracted airway skeletons. Increasing both the volume of the datasets and resolution for the calculation of the airway skeletons resulted in airway descriptions containing more than \num{10000} nodes.
 
-Figure~\ref{fig:skeleton} shows a skeletonization of multiple acini in a rat lung sample obtained at postnatal day 21 containing multiple airway segments containing one or more acini (both shown in the background). The foreground of the image shows the extracted skeletons containing between XXX and \num{1e6}\todo{correct NumNodes?} nodes.
+Figure~\ref{fig:skeleton} shows a skeletonization of multiple acini in a rat lung sample obtained at postnatal day 21 containing multiple airway segments containing one or more acini (both shown in the background). The foreground of the image shows the extracted skeletons containing between \num{1100} and \num{7300} nodes.
 
 \renewcommand{\imsize}{\linewidth}
-\begin{figure}[htp]
+\begin{figure}
 	\centering
 	\pgfmathsetlength{\imagewidth}{\imsize}%
 	\pgfmathsetlength{\imagescale}{\imagewidth/1541}%
@@ -197,7 +192,7 @@ Figure~\ref{fig:skeleton} shows a skeletonization of multiple acini in a rat lun
 		\node[anchor=north west,inner sep=0pt,outer sep=0pt] at (0,0)
 			{\includegraphics[width=\imagewidth]{img/R108C21b-skeleton.png}};
 		% 796px = 4.0138mm > 100px = 504um > 99px = 500um, 20px = 100um
-		\draw[color=red,|-|,thick] (11,341) -- (807,339) node [sloped,midway,above] {\SI{4.0138}{\milli\meter} (2712px)};
+		%\draw[color=red,|-|,thick] (11,341) -- (807,339) node [sloped,midway,above] {\SI{4.0138}{\milli\meter} (2712px)};
 		\draw[|-|,thick] (\x,\y) -- (\x+99,\y) node [midway,above] {\SI{500}{\micro\meter}};
 	\end{tikzpicture}%
 	\caption{Visualization of rat lung sample obtained at postnatal day 21. Left: Three-dimensional view of the sample, Right: Four independent airway segments. Foreground: Extracted airway skeletons of the independent airways. The yellow skeleton contains \num{1133}, the green \num{7288}, the red \num{6513} and the blue skeleton \num{3278} nodes.}
@@ -205,9 +200,6 @@ Figure~\ref{fig:skeleton} shows a skeletonization of multiple acini in a rat lun
 \end{figure}
 
 This big amount of skeleton points makes such a manual method no longer feasible. Current work on the extraction of structural information now focuses on the reproducibility of the skeleton extraction algorithm. We plan to conduct a morphological counting study for assessing the biological correctness of the computationally derived skeleton. Additionally, we started a collaboration with Fraunhofer MeVis, the provider of the visualization software MeVisLab, which is used for calculating the airway skeletons to adapt the skeletonization algorithm to segmentations obtained from our samples.
-
-\subsection{Skeletonization}
-Extraction of Number of Nodes and Number of Edges - matching with volume-fraction to gain information about structural alteration during lung development
 
 \section{Publications}\label{sec:publications}
 \subsection{Publication on the enhancement of the field of view of TOMCAT}
