--- a/img/ROI-1863-0237-0604.tex
+++ b/img/ROI-1863-0237-0604.tex
@@ -1,24 +1,26 @@
 % \documentclass{article}
-% \usepackage{tikz,pgfplots}
+% \usepackage{tikz,pgfplots,siunitx}
 % \usepackage[pdftex,active,tightpage]{preview}
+% \newcommand{\imsize}{\linewidth}
 % \begin{document}
 % \begin{preview}
 %%%%%%%%%%%%
 \begin{tikzpicture}
 
+% \pgfplotsset{every axis legend/.append style={at={(0.5,1.1)},anchor=south}}
+
 % Axis at [0.13 0.11 0.78 0.81]
 \begin{semilogyaxis}[
-axis on top,
-% scale only axis,
-grid=both,
 width=\imsize,
-% height=3.56562in,
+grid=both,
 xmin=0, xmax=65,
 ymin=1, ymax=1e+007,
-xlabel={Thickness [\micro m]},
-ylabel={Number of Voxels},
-% title={ROI 3},
-legend entries={slow (ROI 3),med (ROI 3),fast (ROI 3)}
+xlabel={Thickness [$\micro$m]},
+ylabel={Pixel Count},
+legend entries={%
+    B ROI 4,%
+    L ROI 4,%
+    T ROI 4}
 ]
 
 \addplot [
@@ -70,7 +72,7 @@ solid
 
 \end{semilogyaxis}
 
-\end{tikzpicture}
-%%%%%%%%%%%%%
+\end{tikzpicture}%
+%%%%%%%%%%%%
 % \end{preview}
 % \end{document}
